--- a/index.html
+++ b/index.html
@@ -18,12 +18,15 @@
 
 </head>
 
-<body>
+<body background ="images/hatInAir.jpg">
 
   <!-- Navigation -->
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
     <div class="container">
-      <a class="navbar-brand" href="#">Khanyezi</a>
+      <div class="row">
+      <!-- <a class="navbar-brand" href="#">Khanyezi</a>  -->
+      <img src="images/KhanyeziLogo2.png" alt="Logo" width="75" height="75">
+    </div>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -95,9 +98,8 @@
       </div>
     </div>
     <!-- /.row -->
-  
+    <h2 class="h2-pg">Are you a post-graduate seeking student funding?</h2>
     <div class="row">
-      <h2>Are you a post-graduate seeking student funding?</h2>
       <hr>
       <div class="col-md-4 mb-5">
         <div class="card h-100">
