--- a/index.html
+++ b/index.html
@@ -22,11 +22,13 @@
 
   <!-- Navigation -->
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
-    <div class="container">
-      <div class="row">
+     <div class="container">
+       <div id="logo">
+          <a href="/Users/kalubachikonde/Documents/GitHub/DApp/index.html">
       <!-- <a class="navbar-brand" href="#">Khanyezi</a>  -->
-      <img src="images/KhanyeziLogo2.png" alt="Logo" width="75" height="75">
-    </div>
+             <img src="/Users/kalubachikonde/Documents/GitHub/DApp/images/KhanyeziLogo2.png" alt="Logo" width="75" height="75">
+          </a>
+     </div>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
