--- a/Login_v1/log-in.html
+++ b/Login_v1/log-in.html
@@ -37,7 +37,7 @@
 					<div class="collapse navbar-collapse" id="navbarResponsive">
 					  <ul class="navbar-nav ml-auto">
 						<li class="nav-item active">
-						  <a class="nav-link" href="/Users/kalubachikonde/Desktop/KhanyeziWebApp/index.html">Home
+						  <a class="nav-link" href="/Users/kalubachikonde/Documents/GitHub/DApp/index.html">Home
 							<span class="sr-only">(current)</span>
 						  </a>
 						</li>
@@ -45,14 +45,14 @@
 						  <a class="nav-link" href="#">About</a>
 						</li>
 						<li class="nav-item">
-						  <a class="nav-link" href="/Users/kalubachikonde/Desktop/KhanyeziWebApp/students.html">Students</a>
+						  <a class="nav-link" href="/Users/kalubachikonde/Documents/GitHub/DApp/students.html">Students</a>
 						</li>
 						<li class="nav-item">
-						  <a class="nav-link" href="/Users/kalubachikonde/Desktop/KhanyeziWebApp/investors.html">Investors
+						  <a class="nav-link" href="/Users/kalubachikonde/Documents/GitHub/DApp/investors.html">Investors
 						  </a>
 						</li>
 						<li class="nav-item">
-						  <a class="nav-link" href="Login_v1/log-in.html">Log in</a>
+						  <a class="nav-link" href="/Users/kalubachikonde/Documents/GitHub/DApp/Login_v1/log-in.html">Log in</a>
 						</li>
 					  </ul>
 					</div>
