--- a/index.html
+++ b/index.html
@@ -74,10 +74,9 @@
 
     <div class="row">
       <div class="col-md-8 mb-5">
-        <h2>What We Do</h2>
+        <h2 class="h2-wwd">What We Do</h2>
         <hr>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. A deserunt neque tempore recusandae animi soluta quasi? Asperiores rem dolore eaque vel, porro, soluta unde debitis aliquam laboriosam. Repellat explicabo, maiores!</p>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Omnis optio neque consectetur consequatur magni in nisi, natus beatae quidem quam odit commodi ducimus totam eum, alias, adipisci nesciunt voluptate. Voluptatum.</p>
+        <p class= "p-wwd">Khanyezi is a company that connects post-graduate students and investors. Our aim is to create more viable interest rates for students on their student loans and simultaneously create a more secure investment for the investors. We also aim to increase access to funding as traditional funding sources tend to require a guarantor and interest repayments during their studies.</p>
         <a class="btn btn-primary btn-lg" href="#">Apply
            &raquo;</a>
       </div>
