update home page

--- a/Login_v1/log-in.html
+++ b/Login_v1/log-in.html
@@ -62,7 +62,7 @@
 		<div class="container-login100">
 			<div class="wrap-login100">
 				<div class="login100-pic js-tilt" data-tilt>
-					<img src="images/img-01.png" alt="IMG">
+					<img src="/Users/kalubachikonde/Documents/GitHub/DApp/images/KhanyeziLogo.png" alt="IMG">
 				</div>
 
 				<form class="login100-form validate-form">
