--- a/log-in.html
+++ b/log-in.html
@@ -5,20 +5,20 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 <!--===============================================================================================-->	
-	<link rel="icon" type="image/png" href="images/icons/favicon.ico"/>
+	<link rel="icon" type="image/png" href="Login_v1/images/icons/favicon.ico"/>
 <!--===============================================================================================-->
-	<link rel="stylesheet" type="text/css" href="vendor/bootstrap/css/bootstrap.min.css">
+	<link rel="stylesheet" type="text/css" href="Login_v1/vendor/bootstrap/css/bootstrap.min.css">
 <!--===============================================================================================-->
-	<link rel="stylesheet" type="text/css" href="fonts/font-awesome-4.7.0/css/font-awesome.min.css">
+	<link rel="stylesheet" type="text/css" href="Login_v1/fonts/font-awesome-4.7.0/css/font-awesome.min.css">
 <!--===============================================================================================-->
-	<link rel="stylesheet" type="text/css" href="vendor/animate/animate.css">
+	<link rel="stylesheet" type="text/css" href="Login_v1/vendor/animate/animate.css">
 <!--===============================================================================================-->	
-	<link rel="stylesheet" type="text/css" href="vendor/css-hamburgers/hamburgers.min.css">
+	<link rel="stylesheet" type="text/css" href="Login_v1/vendor/css-hamburgers/hamburgers.min.css">
 <!--===============================================================================================-->
-	<link rel="stylesheet" type="text/css" href="vendor/select2/select2.min.css">
+	<link rel="stylesheet" type="text/css" href="Login_v1/vendor/select2/select2.min.css">
 <!--===============================================================================================-->
-	<link rel="stylesheet" type="text/css" href="css/util.css">
-	<link rel="stylesheet" type="text/css" href="css/main.css">
+	<link rel="stylesheet" type="text/css" href="Login_v1/css/util.css">
+	<link rel="stylesheet" type="text/css" href="Login_v1/css/main.css">
 <!--===============================================================================================-->
 </head>
 <body>
@@ -26,9 +26,9 @@
 	 <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
 			<div class="container">
 				<div id="logo">
-					<a href="/Users/kalubachikonde/Documents/GitHub/DApp/index.html">
+					<a href="index.html">
 						<!-- <a class="navbar-brand" href="#">Khanyezi</a>  -->
-						<img src="/Users/kalubachikonde/Documents/GitHub/DApp/images/KhanyeziLogo2.png" alt="Logo" width="75" height="75">
+						<img src="images/KhanyeziLogo2.png" alt="Logo" width="75" height="75">
 					</a>
 				 </div>  
 					<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
@@ -37,7 +37,7 @@
 					<div class="collapse navbar-collapse" id="navbarResponsive">
 					  <ul class="navbar-nav ml-auto">
 						<li class="nav-item active">
-						  <a class="nav-link" href="/Users/kalubachikonde/Documents/GitHub/DApp/index.html">Home
+						  <a class="nav-link" href="index.html">Home
 							<span class="sr-only">(current)</span>
 						  </a>
 						</li>
@@ -45,14 +45,14 @@
 						  <a class="nav-link" href="#">About</a>
 						</li>
 						<li class="nav-item">
-						  <a class="nav-link" href="/Users/kalubachikonde/Documents/GitHub/DApp/students.html">Students</a>
+						  <a class="nav-link" href="students.html">Students</a>
 						</li>
 						<li class="nav-item">
-						  <a class="nav-link" href="/Users/kalubachikonde/Documents/GitHub/DApp/investors.html">Investors
+						  <a class="nav-link" href="investors.html">Investors
 						  </a>
 						</li>
 						<li class="nav-item">
-						  <a class="nav-link" href="/Users/kalubachikonde/Documents/GitHub/DApp/Login_v1/log-in.html">Log in</a>
+						  <a class="nav-link" href="Login_v1/log-in.html">Log in</a>
 						</li>
 					  </ul>
 					</div>
@@ -62,7 +62,7 @@
 		<div class="container-login100">
 			<div class="wrap-login100">
 				<div class="login100-pic js-tilt" data-tilt>
-					<img src="/Users/kalubachikonde/Documents/GitHub/DApp/images/KhanyeziLogo.png" alt="IMG">
+					<img src="images/KhanyeziLogo.png" alt="IMG">
 				</div>
 
 				<form class="login100-form validate-form">
@@ -102,7 +102,7 @@
 					</div>
 
 					<div class="text-center p-t-136">
-						<a class="nav" href="registrationForm/regForm.html">
+						<a class="nav" href="Login_v1/registrationForm/regForm.html">
 							Create your Account
 							<i class="fa fa-long-arrow-right m-l-5" aria-hidden="true"></i>
 						</a>
@@ -116,21 +116,21 @@
 
 	
 <!--===============================================================================================-->	
-	<script src="vendor/jquery/jquery-3.2.1.min.js"></script>
+	<script src="Login_v1/vendor/jquery/jquery-3.2.1.min.js"></script>
 <!--===============================================================================================-->
-	<script src="vendor/bootstrap/js/popper.js"></script>
-	<script src="vendor/bootstrap/js/bootstrap.min.js"></script>
+	<script src="Login_v1/vendor/bootstrap/js/popper.js"></script>
+	<script src="Login_v1/vendor/bootstrap/js/bootstrap.min.js"></script>
 <!--===============================================================================================-->
-	<script src="vendor/select2/select2.min.js"></script>
+	<script src="Login_v1/vendor/select2/select2.min.js"></script>
 <!--===============================================================================================-->
-	<script src="vendor/tilt/tilt.jquery.min.js"></script>
+	<script src="Login_v1/vendor/tilt/tilt.jquery.min.js"></script>
 	<script >
 		$('.js-tilt').tilt({
 			scale: 1.1
 		})
 	</script>
 <!--===============================================================================================-->
-	<script src="js/main.js"></script>
+	<script src="Login_v1/js/main.js"></script>
 
 </body>
 </html>
