--- a/investors.html
+++ b/investors.html
@@ -14,9 +14,9 @@
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
         <div class="container">
             <div id="logo">
-                <a href="/Users/kalubachikonde/Documents/GitHub/DApp/index.html">
+                <a href="index.html">
             <!-- <a class="navbar-brand" href="#">Khanyezi</a>  -->
-                   <img src="/Users/kalubachikonde/Documents/GitHub/DApp/images/KhanyeziLogo2.png" alt="Logo" width="75" height="75">
+                   <img src="images/KhanyeziLogo2.png" alt="Logo" width="75" height="75">
                 </a>
           </div>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
@@ -25,7 +25,7 @@
                 <div class="collapse navbar-collapse" id="navbarResponsive">
                   <ul class="navbar-nav ml-auto">
                     <li class="nav-item active">
-                      <a class="nav-link" href="/Users/kalubachikonde/Documents/GitHub/DApp/index.html">Home
+                      <a class="nav-link" href="index.html">Home
                         <span class="sr-only">(current)</span>
                       </a>
                     </li>
