create employability score page

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
             </a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="Login_v1/log-in.html">Log in</a>
+            <a class="nav-link" href="log-in.html">Log in</a>
           </li>
         </ul>
       </div>
