--- a/Login_v1/registrationForm/employabilityScore.html
+++ b/Login_v1/registrationForm/employabilityScore.html
@@ -160,6 +160,11 @@
                                     <div class="select-dropdown"></div>
                                 </div>
                         </div>
+                        <div class="input-group">
+                                <label class="label">Net Income</label>
+                                <input class="input--style-4" type="email" name="email" required>
+                    
+                            </div>
                     
                               <div class="input-group">
                                 <label for="inputPassword5">Password</label>
