Updated employability score page

--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
             <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sapiente esse necessitatibus neque sequi doloribus.</p>
           </div>
           <div class="card-footer">
-            <a href="#" class="btn btn-primary">Find Out More!</a>
+            <a href="Login_v1/registrationForm/employabilityScore.html" class="btn btn-primary">Find Out More!</a>
           </div>
         </div>
       </div>
