--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
        <div id="logo">
           <a href="/Users/kalubachikonde/Documents/GitHub/DApp/index.html">
       <!-- <a class="navbar-brand" href="#">Khanyezi</a>  -->
-             <img src="/Users/kalubachikonde/Documents/GitHub/DApp/images/KhanyeziLogo2.png" alt="Logo" width="75" height="75">
+             <img src="images/KhanyeziLogo2.png" alt="Logo" width="75" height="75">
           </a>
      </div>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
@@ -74,9 +74,9 @@
 
     <div class="row">
       <div class="col-md-8 mb-5">
-        <h2 class="h2-wwd">What We Do</h2>
+        <h2 class="h2-wwd" style = "color:black">What We Do</h2>
         <hr>
-        <p class= "p-wwd">Khanyezi is a company that connects post-graduate students and investors. Our aim is to create more viable interest rates for students on their student loans and simultaneously create a more secure investment for the investors. We also aim to increase access to funding as traditional funding sources tend to require a guarantor and interest repayments during their studies.</p>
+        <p class= "p-wwd" style = "color:black">Khanyezi is a company that connects post-graduate students and investors. Our aim is to create more viable interest rates for students on their student loans and simultaneously create a more secure investment for the investors. We also aim to increase access to funding as traditional funding sources tend to require a guarantor and interest repayments during their studies.</p>
         <a class="btn btn-primary btn-lg" href="#">Apply
            &raquo;</a>
       </div>
@@ -99,7 +99,7 @@
       </div>
     </div>
     <!-- /.row -->
-    <h2 class="h2-pg">Are you a post-graduate seeking student funding?</h2>
+    <h2 class="h2-pg" style = "color:dodgerblue">Are you a post-graduate seeking student funding?</h2>
     <div class="row">
       <hr>
       <div class="col-md-4 mb-5">
