--- a/Login_v1/registrationForm/employabilityScore.html
+++ b/Login_v1/registrationForm/employabilityScore.html
@@ -302,19 +302,24 @@
     } 
 
     if(document.getElementById('1').checked) {
-  //Male radio button is checked
+   var gpaScore = 50;
 }else if(document.getElementById('2').checked) {
   //Female radio button is checked
+  var gpaScore = 40;
 }
 else if(document.getElementById('3').checked) {
   //Female radio button is checked
+  var gpaScore = 30;
 }
 else if(document.getElementById('4').checked) {
   //Female radio button is checked
+  var gpaScore = 20;
+
 }
  else if(document.getElementById('5').checked) {
     
   //Female radio button is checked
+  var gpaScore = 10;
  }
 
 
