--- a/Login_v1/registrationForm/employabilityScore.html
+++ b/Login_v1/registrationForm/employabilityScore.html
@@ -288,12 +288,12 @@
             var qualification  =  10;
             // return qualification;
             console.log(qualification);
-        break;
+       // break;
         case "Honours Degree":
             var qualification  =  20;
             console.log(qualification);
            //  return qualification;
-        break;
+        //break;
         case "Masters Degree":
              var qualification  =  30;
              console.log(qualification);
