--- a/Investor_profile.html
+++ b/Investor_profile.html
@@ -47,12 +47,24 @@
                     <div class="p-t-15">
                             <p><a id="investbutton" href="KhanyeziTest.html" class="btn btn--radius-2 btn--blue">Invest</a></p>
                     </div>
+
+                    <hr style = "margin-top: 5em">
+                    <div class="col-4">
+                            <div class="input-group">
+                                <label style = "margin-top: 5em" class="label" style="color: black">Find out your current investment value now</label>
+                                <button id="CalculateInvestment" type="button" class="btn btn-info btn-md">Calculate</button>
+                                <h2 id="InvestmentValue"></h2>
+                            </div>
+                    </div>
+                    
                 </form>        
             </div>
         </div>
 </div>
-<script src="https://code.jquery.com/jquery-3.3.1.js" integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60=" crossorigin="anonymous"></script>
-        <!-- import jquery and web3.js. Only because we are still working locally, -->
+        <script src="https://code.jquery.com/jquery-3.3.1.js" integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60=" crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/gh/ethereum/web3.js/dist/web3.min.js"></script>
+            <!-- import jquery and web3.js. Only because we are still working locally, -->
+        <script src = "Buy_tokens/my_js.js"></script>
 
 </body>
 </html>
