--- a/KhanyeziTest.html
+++ b/KhanyeziTest.html
@@ -66,6 +66,11 @@
                             </div>
                         </div>
                     </div>
+                    <section id = "BackToProfile">
+                            <div style = "margin-top: 5em" class = "container">
+                                <a id="Profile"  type = "button" class="btn btn--radius-2 btn--blue" href="Investor_profile.html">Back to Profile</a>   
+                            </div>
+                    </section>
                 </div>
 
     <script src="https://code.jquery.com/jquery-3.3.1.js" integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60=" crossorigin="anonymous"></script>
