--- a/log-in.html
+++ b/log-in.html
@@ -102,7 +102,7 @@
 					</div>
 
 					<div class="text-center p-t-136">
-						<a class="nav" href="Login_v1/registrationForm/regForm.html">
+						<a class="nav" href="regForm.html">
 							Create your Account
 							<i class="fa fa-long-arrow-right m-l-5" aria-hidden="true"></i>
 						</a>
