Added student profile

--- a/repay1.html
+++ b/repay1.html
@@ -36,12 +36,12 @@
                 <div class="row contacts">
                     <div class="col invoice-to">
                         <div class="text-gray-light">INVOICE TO:</div>
-                        <h2 class="to">John Doe</h2>
+                        <h2 class="to">Khanyezi </h2>
                         <div class="address">1 main road, Rondebosch, Cape Town, South Africa</div>
-                        <div class="email"><a href="mailto:john@workmail.com">john@workmail.com</a></div>
+                        <div class="email"><a href="mailto:harry@workmail.com">Khanyezi@workmail.com</a></div>
                     </div>
                     <div class="col invoice-details">
-                        <h1 class="invoice-id">INVOICE 3-2-1</h1>
+                        <h1 class="invoice-id">INVOICE No. 4</h1>
                         <div class="date">Date of Invoice: 30/08/2021</div>
                         <div class="date">Due Date: 01/09/2021</div>
                     </div>
