About us page created

--- a/investors.html
+++ b/investors.html
@@ -1,5 +1,7 @@
-<head>
-        <title></title>
+<!DOCTYPE html>
+<html> 
+ <head>
+        <title>Investor</title>
             <link rel="stylesheet" href="#">
             <!-- Bootstrap core CSS -->
             <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -30,7 +32,7 @@
                       </a>
                     </li>
                     <li class="nav-item">
-                      <a class="nav-link" href="#">About</a>
+                      <a class="nav-link" href="About.html">About</a>
                     </li>
                     <li class="nav-item">
                       <a class="nav-link" href="students.html">Students</a>
@@ -79,6 +81,10 @@
                                         <li>Create a profile</li>
                                         <li>Buy ether</li>
                                         <li>Buy our KhanyeziTokens</li>
+                                        <li>Start lending automatically</li>
+                                        <li>Receive quarterly repayments</li>
+                                        <li>Repayments can be reinvested</li>
+                                         
                                     </ol> 
                                 </p>
                         <a class="btn btn-primary btn-lg" href="log-in.html">Apply
