--- a/About.html
+++ b/About.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
-<html lang="en">
-    <head>
-        <title></title>
+ <html>  
+  <head>
+        <title>Investor</title>
             <link rel="stylesheet" href="#">
             <!-- Bootstrap core CSS -->
             <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -12,13 +12,13 @@
     </head>
 
     <body>
-        <!-- Navigation -->
-  <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
+         <!-- Navigation -->
+        <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
         <div class="container">
             <div id="logo">
-                <a href="/Users/kalubachikonde/Documents/GitHub/DApp/index.html">
+                <a href="index.html">
             <!-- <a class="navbar-brand" href="#">Khanyezi</a>  -->
-                   <img src="/Users/kalubachikonde/Documents/GitHub/DApp/images/KhanyeziLogo2.png" alt="Logo" width="75" height="75">
+                   <img src="images/KhanyeziLogo2.png" alt="Logo" width="75" height="75">
                 </a>
           </div>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
@@ -27,7 +27,7 @@
                 <div class="collapse navbar-collapse" id="navbarResponsive">
                   <ul class="navbar-nav ml-auto">
                     <li class="nav-item active">
-                      <a class="nav-link" href="/Users/kalubachikonde/Documents/GitHub/DApp/index.html">Home
+                      <a class="nav-link" href="index.html">Home
                         <span class="sr-only">(current)</span>
                       </a>
                     </li>
@@ -47,38 +47,28 @@
                   </ul>
                 </div>
               </div>
-  </nav>
-        <!-- Page Content -->
-        <div class="container">
-            <div class = "row">
-                <div class = "col-md-8 mb-5">
-          
-                <p>
-                  <h2>Requirements</h2>
-                  <hr>
-                    Documents required to apply for funding:
-                    <ul>
-                        <li>Coffee</li>
-                        <li>Tea</li>
-                        <li>Milk</li>
-                     </ul>  
-                </p>
-                <h2>Steps</h2>
-                <hr>
-                <p>
-                    <ol>
-                        <li>Coffee</li>
-                        <li>Tea</li>
-                        <li>Milk</li>
-                     </ol> 
-                </p>
-                <a class="btn btn-primary btn-lg" href="#">Apply
-                        &raquo;</a>
-             </div>
-            </div>
-        </div>
+        </nav>
+   <!-- Page Content -->
+   <section class="about section_1">
+       <div class="inner">
+           <div class="inner-content">
+               <div class="text-block text-block--large">
+                   <h1 class="brand-heading u-color-white">
+                       "Your Journey to Financial Freedom
+                   </h1>
+                   <h2>
+                     "Khanyezi"
+                   </h2>
 
+               </div>
 
-    </body>
+           </div>
+
+       </div>
+
+   </section>
+
+ 
+ </body>
 
 </html>
