--- a/Student_profile.html
+++ b/Student_profile.html
@@ -32,6 +32,9 @@
         <div class="card card-4">
             <div class="card-body">
                     <center><h1 class="header">Welcome Khanyezi! </h1></center>
+
+                    <center><h3 id = loanDetails></h3></center>
+
                 <form method="POST">
                     <img src="images/student.png" class = "image">
 
@@ -43,7 +46,7 @@
                     <div class="p-t-15">
                             <label class="label">Enter repayment amount below </label>
                             <input style = "margin-top: 1em" id="repayment" class="input--style-4" type="text">
-                            <p><a style = "margin-top: 1em" id="studentbutton" href = "" class="btn btn--radius-2 btn--blue">Make Repayment</a></p>
+                            <p><button style = "margin-top: 1em" id="studentbutton" class="btn btn--radius-2 btn--blue">Make Repayment</button></p>
                             <h2 style = "margin-top: 1em" id="studentdetails"></h2>
                     </div>
 
