--- a/regForm.html
+++ b/regForm.html
@@ -164,11 +164,11 @@
                         <div class = "row">
                         <div class="p-t-15">
                            <p>Student</p>
-                            <button id ="submit" class="btn btn--radius-2 btn--blue" type="submit">Submit</button> 
+                            <a id ="studentSubmit" class="btn btn--radius-2 btn--blue" href = "Student_profile.html" type="submit">Submit</a> 
                         </div>
                         <div class="p-t-15">
-                                <p>Investor</p>
-                            <a id = "investorSubmit"  class="btn btn--radius-2 btn--blue" href = "investor_profile.html" type="submit">Submit</a>
+                                <p style = "margin-left:13em">Investor</p>
+                            <a style = "margin-left:10em" id = "investorSubmit"  class="btn btn--radius-2 btn--blue" href = "investor_profile.html" type="submit">Submit</a>
                         </div>
                       </div>
                 
@@ -209,6 +209,9 @@
 
     <!-- Main JS-->
     <script src="Login_v1/registrationForm/js/global.js"></script>
+    <script src="https://cdn.jsdelivr.net/gh/ethereum/web3.js/dist/web3.min.js"></script>
+            <!-- import jquery and web3.js. Only because we are still working locally, -->
+    <script src = "Buy_tokens/my_js.js"></script>
 
 </body><!-- This templates was made by Colorlib (https://colorlib.com) -->
 
