--- a/KhanyeziTest.html
+++ b/KhanyeziTest.html
@@ -33,6 +33,7 @@
                         <section id="progress bar" class="about-section text-center">
                                 <div class = "container">
                                     <h1 style = "color:floralwhite">Our progress: </h1>
+                                    <h2 id="TotalTokens" style = "color: floralwhite"></h2>
                                     <h2 id="TokenProgress" style = "color: floralwhite"></h2>
                                     <div class="progress md-progress" style="height: 20px">
                                             <div class="progress-bar" role="progressbar" style="width: 25%; height: 20px" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
