--- a/regForm.html
+++ b/regForm.html
@@ -168,7 +168,7 @@
                         </div>
                         <div class="p-t-15">
                                 <p style = "margin-left:13em">Investor</p>
-                            <a style = "margin-left:10em" id = "investorSubmit"  class="btn btn--radius-2 btn--blue" href = "investor_profile.html" type="submit">Submit</a>
+                            <a id = "investorSubmit" style = "margin-left:10em"  class="btn btn--radius-2 btn--blue" href = "investor_profile.html" type="submit">Submit</a>
                         </div>
                       </div>
                 
