--- a/Student_profile.html
+++ b/Student_profile.html
@@ -32,22 +32,21 @@
         <div class="card card-4">
             <div class="card-body">
                     <center><h1 class="header">Welcome Khanyezi! </h1></center>
-
-                    <center><h3 id = loanDetails></h3></center>
-
                 <form method="POST">
                     <img src="images/student.png" class = "image">
 
                     <p class="title" style = "margin-top: 3em">Masters in FinTech</p>
                     <h5>University of Cape Town</h5>
                     <h5 style = "color: red">Loan Status: Approved</h5>
+                    <h5 id = loanDetails></h5></center>
+
                     <hr style = "margin-top: 2em">
                     
                     <div class="p-t-15">
                             <label class="label">Enter repayment amount below </label>
-                            <input style = "margin-top: 1em" id="repayment" class="input--style-4" type="text">
-                            <p><button style = "margin-top: 1em" id="studentbutton" class="btn btn--radius-2 btn--blue">Make Repayment</button></p>
-                            <h2 style = "margin-top: 1em" id="studentdetails"></h2>
+                            <input id="repayment" style = "margin-top: 1em" class="input--style-4" type="text">
+                            <button id="studentbutton" style = "margin-top: 1em" class="btn btn--radius-2 btn--blue">Make Repayment</button>
+                            <h2 id="studentdetails" style = "margin-top: 1em"></h2>
                     </div>
 
 
