--- a/About.html
+++ b/About.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
  <html>  
   <head>
-        <title>Investor</title>
-            <link rel="stylesheet" href="#">
+        <title>About</title>
+            <link rel="stylesheet" href="main.css">
             <!-- Bootstrap core CSS -->
             <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
@@ -11,7 +11,7 @@
 
     </head>
 
-    <body>
+    <body id="aboutBody" >
          <!-- Navigation -->
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
         <div class="container">
@@ -49,25 +49,38 @@
               </div>
         </nav>
    <!-- Page Content -->
-   <section class="about section_1">
-       <div class="inner">
+   <section style = "margin-top: 5em" class="about-section_1" >
+     <div class = "container" >
+       <div class="row">
+         <div class="inner">
            <div class="inner-content">
                <div class="text-block text-block--large">
-                   <h1 class="brand-heading u-color-white">
-                       "Your Journey to Financial Freedom
+                   <h1 style = "margin-top: 5em" class="about_heading">
+                       YOUR JOURNEY TO FINANCIAL FREEDOM!
+                       <hr> 
                    </h1>
-                   <h2>
-                     "Khanyezi"
-                   </h2>
+                   <h4>
+                     Khanyezi aims to empower communities to invest in their youths through decentralized finance
+                   </h4>
 
-               </div>
-
-           </div>
-
-       </div>
-
+                </div>
+            </div>
+          </div>
+         </div>
+      </div>
    </section>
+   &nbsp; 
+    <div class = "row">
+    <div class="col-md-6 mb-5">
+        <h2>Our Mission</h2>
+        <hr>
+         <p>
+           We believe that the current student loan system in South Africa excludes many students with potential, as they often require a guarantor to co-sign their student loan. We will create a risk model which will project the likelihood of the student becoming employed once graduated and their income, this will allow us to place needed confidence in the repayments of the loans. This will be done using curated student data and to train a logistic regresion model for the likelihood of employment, or a linear regression for the income prediction. We believe that these models allow for simplicity, and transparency in our decision-making.
 
+
+       </p>
+    </div>
+    </div>
  
  </body>
 
