--- a/index.html
+++ b/index.html
@@ -107,10 +107,9 @@
           <img class="center" src="images/score-icon-18.png" width="200" height="200" alt="">
           <div class="card-body">
             <h4 class="card-title">Check your employability score</h4>
-            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sapiente esse necessitatibus neque sequi doloribus.</p>
           </div>
           <div class="card-footer">
-            <a href="Login_v1/registrationForm/employabilityScore.html" class="btn btn-primary">Find Out More!</a>
+            <a href="employabilityScore.html" class="btn btn-primary">Find Out More!</a>
           </div>
         </div>
       </div>
@@ -119,7 +118,6 @@
           <img class="center" src="images/completeform2.png" width="200" height="200"  alt="">
           <div class="card-body">
             <h4 class="card-title">Complete loan application form</h4>
-            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sapiente esse necessitatibus neque sequi doloribus totam ut praesentium aut.</p>
           </div>
           <div class="card-footer">
             <a href="#" class="btn btn-primary">Find Out More!</a>
@@ -131,7 +129,6 @@
           <img class="card-img-top" src="images/gradcap.jpg"  width="200" height="200"  alt="">
           <div class="card-body">
             <h4 class="card-title">Approved? Begin your journey</h4>
-            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sapiente esse necessitatibus neque.</p>
           </div>
           <div class="card-footer">
             <a href="#" class="btn btn-primary">Find Out More!</a>
