--- a/log-in.html
+++ b/log-in.html
@@ -87,9 +87,9 @@
 					</div>
 					
 					<div class="container-login100-form-btn">
-						<button class="login100-form-btn">
-							Login
-						</button>
+						<div class="p-t-16"></div>
+								 <a  class="login100-form-btn" href = "Student_profile.html" type="submit">Login</a> 
+							
 					</div>
 
 					<div class="text-center p-t-12">
