--- a/students.html
+++ b/students.html
@@ -79,7 +79,7 @@
                                              
                                         </ol> 
                                     </p>
-                            <a class="btn btn-primary btn-lg" href="log-in.html">Apply
+                            <a class="btn btn-primary btn-lg" href="employabilityScore.html">Apply
                                     &raquo;</a>
                           </div>
                       </div>
