--- a/regForm.html
+++ b/regForm.html
@@ -120,6 +120,8 @@
                                     </div>
                                 </div>
                         </div>
+                        <div class="row row-space">
+                             <div class="col-2">
                         <div class="input-group">
                                 <label class="label">Are you a student or an investor?</label>
                                 <div class="rs-select2 js-select-simple select--no-search">
@@ -130,6 +132,14 @@
                                     </select>
                                     <div class="select-dropdown"></div>
                                 </div>
+                         </div>
+                        </div>
+                        <div class="col-2">
+                                <div class="input-group">
+                                    <label class="label">Current Degree Programme</label>
+                                    <input class="input--style-4" type="text" name="ID">
+                                </div>
+                            </div>
                         </div>
                         <form class="md-form">
                                 <div class="file-field">
