Updates to website

--- a/investors.html
+++ b/investors.html
@@ -50,18 +50,23 @@
         </nav>
 
         <!-- Page Content -->
+        <div style = "margin-top: 2em" class= "color-box">
+            <p style = "font-family: cursive">Be part of empowering our youths!</p>
+        </div>
+
         <section id="requirments">
 
         <div class="container">
                 <div class="row">
                     <div class="col-lg-8 mx-auto">
                             
-                      <h2 style = "margin-top: 5em">Investing with us</h2>
-                                <h4 style = "color:royalblue">Make sure you understand the risks and rewards of our services</h4>
+                      <h2 style = "margin-top: 1em">Investing with us</h2>
+                                <h4 style = "color:royalblue">** Make sure you understand the risks and rewards of our services</h4>
+
                                 <img src="images/blockchainImage.png" alt="Logo" width="120" height="120">
                                 
                                 <hr>
-                                <h3>Why you should invest with us: </h3>
+                                <h3>How our lending works: </h3>
                                 <ul>
                                     <li>Take part in social responsible investing</li>  
                                     <li>Enable students to do their masters degree based on their future rather than past </li>
@@ -75,13 +80,14 @@
                                     <li>Proof of Funds</li>
                                 </ul>  
 
-                                <h2>Steps</h2>
+                                <h3>Steps:</h3>
                                 <hr>
                                 <p>
                                     <ol>
                                         <li>Create a profile</li>
                                         <li>Create a MetaMask account</li>
                                         <li>Buy ether</li>
+                                        <li>Wait until our next round of token sales start</li>
                                         <li>Buy our KhanyeziTokens</li>
                                         <li>Start lending automatically</li>
                                         <li>Receive quarterly repayments</li>
@@ -91,6 +97,7 @@
                                 </p>
                         <a class="btn btn-primary btn-lg" href="log-in.html">Apply
                                 &raquo;</a>
+                          <hr style = "margin-top: 1em" >
                       </div>
                   </div>
           </div>
