--- a/students.html
+++ b/students.html
@@ -49,7 +49,7 @@
               </div>
   </nav>
         <!-- Page Content -->
-        <div style = "margin-top: 2em" class= "color-box2">
+        <div style = "margin-top: 3em" class= "color-box2">
             <p style = "font-family: cursive">“Education is the most powerful weapon which you can use to change the world.”
                 一Nelson Mandela </p>
         </div>
@@ -61,7 +61,7 @@
                         <div class="col-lg-8 mx-auto">
                                 
                           <h2 style = "margin-top: 1em">Apply for a Loan today!</h2>
-                                    <h4 style = "color:royalblue">Are you applying for master's degree and need funding?</h4>
+                                    <h4 style = "color:royalblue">Are you applying for a master's degree and need funding?</h4>
                                     <img src="images/gradcap.jpg" alt="Logo" width="120" height="120">
                                     
                                     <hr>
