--- a/index.html
+++ b/index.html
@@ -18,13 +18,13 @@
 
 </head>
 
-<body background ="images/hatInAir.jpg">
+<body background ="images/graduation5.jpg">
 
   <!-- Navigation -->
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
      <div class="container">
        <div id="logo">
-          <a href="/Users/kalubachikonde/Documents/GitHub/DApp/index.html">
+          <a href="index.html">
       <!-- <a class="navbar-brand" href="#">Khanyezi</a>  -->
              <img src="images/KhanyeziLogo2.png" alt="Logo" width="75" height="75">
           </a>
