--- a/Investor_profile.html
+++ b/Investor_profile.html
@@ -33,7 +33,7 @@
             <div class="card-body">
                     <center><h1 class="header">Welcome John Doe! </h1></center>
                 <form method="POST">
-                    <img src="images/investor2.png" class = "image">
+                    <img src="images/Investor1.png" class = "image">
 
                     <p class="title" style = "margin-top: 3em">CEO & Founder</p>
                     <p class="title">ButterfliesAndRainbows</p>
