--- a/Student_profile.html
+++ b/Student_profile.html
@@ -52,11 +52,16 @@
 
                     <hr style = "margin-top: 5em">
                     <div class="col-4">
-                            <div class="input-group">
+                        <div class="input-group">
                                 <label style = "margin-top: 3em" class="label" style="color: black">Generate your invoice in Rand here</label>
                                 <a style = "margin-top: 1em" href ="repay1.html" type="button" class="btn btn--radius-2 btn--black">Invoice</a>
-                            </div>
-                    </div>
+                        </div>
+                        </div>
+                        
+                        <hr style = "margin-top: 5em">
+                        <div class="col-4">
+                                <a style = "margin-top: 1em" href ="index.html" type="button" class="btn btn--radius-2 btn--black">Home</a>
+                        </div>
                     
                 </form>        
             </div>
