--- a/regForm.html
+++ b/regForm.html
@@ -174,7 +174,7 @@
                         <div class = "row">
                         <div class="p-t-15">
                            <p>Student</p>
-                            <a id ="studentSubmit" class="btn btn--radius-2 btn--blue" href = "Student_profile.html" type="submit">Submit</a> 
+                            <a id ="studentSubmit" class="btn btn--radius-2 btn--blue" href = "employabilityScore.html" type="submit">Submit</a> 
                         </div>
                         <div class="p-t-15">
                                 <p style = "margin-left:13em">Investor</p>
