--- a/students.html
+++ b/students.html
@@ -84,7 +84,7 @@
                                              
                                         </ol> 
                                     </p>
-                            <a class="btn btn-primary btn-lg" href="employabilityScore.html">Apply
+                            <a class="btn btn-primary btn-lg" href="regForm.html">Apply
                                     &raquo;</a>
                                     <hr style = "margin-top: 1em" >
                           </div>
