--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
       </div> -->
     </div>
     <!-- /.row -->
-    <h2 class="h2-pg" style = "color:dodgerblue">Are you a post-graduate seeking student funding?</h2>
+    <h2 class="h2-pg" style = "color:black;">Are you a post-graduate seeking student funding?</h2>
     <div class="row">
       <hr>
       <div class="col-md-4 mb-5">
@@ -139,7 +139,7 @@
     <!-- /.row -->
 
     <!-- /.row -->
-    <h2 class="h2-pg" style = "color:dodgerblue">Are you an investor seeking to fund students</h2>
+    <h2 class="h2-pg" style = "color:black">Are you an investor seeking to fund students</h2>
     <div class="row">
       <hr>
       <div class="col-md-4 mb-5">
